tests/files/type_checker_tests/should_fail/020.cmdr
//Should fail on add set when left side is not a variable
5 += 3;